--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -1,10 +1,10 @@
 
-
+// 12 col then 4 col then 2 col footer
 footer {
     margin: 60px 0;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-gap: 30px;
+    // grid-gap: 10px;
     grid-template-areas: 
     "address address address address address services services account account insta insta insta";
     @media (max-width:$break-large) {
@@ -29,22 +29,18 @@ footer > div {
 }
 
 .wrap--footerSection1 {
-    // grid-column-end: span 5;
     grid-area: address;
 }
 
 .wrap--footerSection2 {
-    // grid-column-end: span 2;
     grid-area: services;
 }
 
 .wrap--footerSection3 {
-    // grid-column-end: span 2;
     grid-area: account;
 }
 
 .wrap--footerSection4 {
-    // grid-column-end: span 3;
     grid-area: insta;
 }
 
@@ -52,8 +48,11 @@ footer > div {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
+
+    margin-bottom: 30px;
 }
 
-footer .graphics--logo {
-    // margin-bottom: 42px;
+.wrap-cc img{
+    height: 24px;
 }
+
