--- a/style/style.css
+++ b/style/style.css
@@ -273,6 +273,12 @@ li {
     text-transform: uppercase;
     font-weight: 700;
     margin-right: 10px; }
+    .link--mainNav:hover {
+      border-bottom: 1px solid transparent; }
+    @media (max-width: 700px) {
+      .link--mainNav {
+        font-size: 30px;
+        width: 100%; } }
 
 .label--productName {
   font-size: 1.4rem;
@@ -434,38 +440,49 @@ header > div {
     header > div {
       padding: 5px 0; } }
 
-header > div:first-of-type {
+header .nav__main {
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start; }
   @media (max-width: 700px) {
-    header > div:first-of-type {
-      width: 50%;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      padding: 0; } }
+    header .nav__main {
+      width: 100vw;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-flow: column wrap;
+      -ms-flex-flow: column wrap;
+      flex-flow: column wrap;
+      display: none;
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; } }
+  header .nav__main.open {
+    display: block; }
 
 @media (max-width: 700px) {
   header > div:nth-of-type(2) {
     width: 100%;
     display: inline;
-    -webkit-box-ordinal-group: 0;
-    -webkit-order: -1;
-    -ms-flex-order: -1;
-    order: -1; } }
+    -webkit-box-ordinal-group: -1;
+    -webkit-order: -2;
+    -ms-flex-order: -2;
+    order: -2; } }
 
 header > div:last-of-type {
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
-  justify-content: flex-end; }
+  justify-content: flex-end;
+  z-index: 10; }
   @media (max-width: 700px) {
     header > div:last-of-type {
       width: 50%;
-      display: inline; } }
+      display: inline;
+      -webkit-box-ordinal-group: 0;
+      -webkit-order: -1;
+      -ms-flex-order: -1;
+      order: -1; } }
 
 .icon--mainNav {
   padding: 5px;
@@ -674,7 +691,7 @@ img {
 ----------------------------------------*/
 @media (max-width: 700px) {
   section.hero {
-    margin-top: 145px; } }
+    margin-top: 112px; } }
 
 .hero {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.4)), to(rgba(255, 255, 255, 0.4))), url("../assets/hero.jpg");
