--- a/style/style.scss
+++ b/style/style.scss
@@ -124,7 +124,7 @@ img {
 }
 
 .categories .heading--section:after {
-    content: url("../assets/graphics-plant.svg");
+    // content: url("../assets/graphics-plant.svg");
     position: absolute;
     left: 40%;
     bottom: -10px;
